src/objects/MyContent_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Live_Redirect_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Redirect Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redirect_Message__c</fullName>
        <label>Redirect Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_Title__c</fullName>
        <label>Redirect Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MyContent Settings</label>
</CustomObject>